# UserApplication

./: .env  .gitignore  Dockerfile  README.md  build.sh  docker-compose-production.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
.github/workflows/: Trigger.yml
App/: .env  crud.py  database.py  main.py  models.py  schemas.py
App/utils/: crud.py  models.py  schemas.py
