[tool.poetry]
name = "userapplication"
version = "0.1.0"
description = ""
authors = ["shreyas-acharya <acharyashreyas14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
